fix: moving end overflow hidden issue

--- a/src/slots/Banner/index.module.less
+++ b/src/slots/Banner/index.module.less
@@ -363,7 +363,7 @@
       width: 100%;
       display: block;
       bottom: 20px;
-      height: 44px;
+      height: 48px;
       overflow: hidden;
     }
 
